Debug phone log

--- a/src/app/components/phone/phone.component.html
+++ b/src/app/components/phone/phone.component.html
@@ -204,7 +204,7 @@ For now, I'd like the data shown.  But, clicking a div makes that customer the a
         <div class="width-100" (click)="selectCustomer(log.uid)" id="{{ i }}">
           <div class="form-check form-check-inline width-100" id="{{ i }}">
             <h6 class="width-100" id="{{ i }}">{{ log.fullname }}</h6>
-            <small class="width-100 txt-rt" id="{{ i }}">{{
+            <small *ngIf="log.lastContact" class="width-100 txt-rt" id="{{ i }}">{{
               log.lastContact.date.toMillis() | date: "MM/dd/yyyy"
             }}</small>
           </div>
@@ -212,24 +212,27 @@ For now, I'd like the data shown.  But, clicking a div makes that customer the a
             <p class="width-100" id="{{ i }}">
               {{ this.DataService.formatPhoneNumber(log.phonenumber) }}
             </p>
-            <small class="width-100 txt-rt" id="{{ i }}">{{
+            <small *ngIf="log.lastContact" class="width-100 txt-rt" id="{{ i }}">{{
               log.lastContact.date.toMillis() | date: "h:mm a"
             }}</small>
           </div>
           <div class="form-check form-check-inline width-100" id="{{ i }}">
-            <small class="width-100">{{ log.lastContact.result }}</small>
-            <small class="width-100 txt-rt hide" id="call{{ i }}">2min</small>
+            <small *ngIf="log.lastContact" class="width-100">{{ log.lastContact.result }}</small>
+            <!-- <small class="width-100 txt-rt hide" id="call{{ i }}">2min</small> -->
           </div>
         </div>
 
-        <button
+<!-- TODO: If there is lastContact data, display is like the notes entered data "Ryan Rieben | 2022/07/30 1:27 PM" all together on one line  -->
+<!-- TODO: Only if the result was a live conversations (not voicemail or text or no answer) we add the call time length -->
+
+        <!-- <button
           class="iconbutton-neumorphism float-right"
           (click)="showTimeHandled(i)"
           matTooltip="Time handled"
           matTooltipPosition="left"
         >
           <i class="bi bi-hourglass-split"></i>
-        </button>
+        </button> -->
         <hr />
       </div>
     </div>
