Text messages page target accomplished. Missing fix contacts list selection & columns size.

--- a/src/app/components/phone/phone.component.html
+++ b/src/app/components/phone/phone.component.html
@@ -5,31 +5,17 @@
         <h6 class="toggle-neumorphism-label">
           {{ element.element_placeholder }}
         </h6>
-        <mat-slide-toggle
-          class="example-margin"
-          [checked]="tglAutoDialer"
-          #templateStatus
-          (change)="toggleAutoDialer()"
-        >
+        <mat-slide-toggle class="example-margin" [checked]="tglAutoDialer" #templateStatus
+          (change)="toggleAutoDialer()">
         </mat-slide-toggle>
       </div>
     </div>
     <div *ngIf="element.element == 'inputIcon' && currentCall">
       <div class="form-check form-check-inline button-inline">
-        <input
-          type="{{ element.element_type }}"
-          class="input-neumorphism"
-          placeholder="{{ currentCallPhoneNumber }}"
-        />
+        <input type="{{ element.element_type }}" class="input-neumorphism" placeholder="{{ currentCallPhoneNumber }}" />
         <div class="iconbutton-neumorphism btnCall" (click)="btnAnswerCall()">
-          <i
-            class="bi bi-telephone-fill"
-            [ngClass]="containerCallStatus ? 'hide' : 'show'"
-          ></i>
-          <i
-            class="bi bi-x-circle-fill"
-            [ngClass]="containerCallStatus ? 'show' : 'hide'"
-          ></i>
+          <i class="bi bi-telephone-fill" [ngClass]="containerCallStatus ? 'hide' : 'show'"></i>
+          <i class="bi bi-x-circle-fill" [ngClass]="containerCallStatus ? 'show' : 'hide'"></i>
         </div>
       </div>
     </div>
@@ -41,11 +27,7 @@
             </div>
         </div> -->
   </div>
-  <div
-    *ngIf="containerCallStatus"
-    class="container-neumorphism"
-    [ngClass]="holdStatus ? 'change-on-hold' : ''"
-  >
+  <div *ngIf="containerCallStatus" class="container-neumorphism" [ngClass]="holdStatus ? 'change-on-hold' : ''">
     <div class="form-check form-check-inline width-100 border-bottom">
       <small class="margin-rt width-100">Call established</small>
       <small class="margin-rt" id="onCallTime">00:01:30</small>
@@ -55,102 +37,41 @@
     </div>
     <div class="form-check form-check-inline width-100">
       <small class="margin-rt width-100">{{ currentCallPhoneNumber }}</small>
-      <button
-        class="mini-iconbutton-neumorphism mute-toggle"
-        matTooltip="Mute"
-        matTooltipPosition="above"
-        (click)="btnMuteCall()"
-        [ngClass]="xferStatus ? 'hide' : 'show'"
-      >
-        <i
-          class="bi bi-mic-fill mute-toggle-unmuted"
-          [ngClass]="muteStatus ? 'hide' : 'show'"
-        ></i>
-        <i
-          class="bi bi-mic-mute-fill mute-toggle-muted"
-          [ngClass]="muteStatus ? 'show' : 'hide'"
-        ></i>
+      <button class="mini-iconbutton-neumorphism mute-toggle" matTooltip="Mute" matTooltipPosition="above"
+        (click)="btnMuteCall()" [ngClass]="xferStatus ? 'hide' : 'show'">
+        <i class="bi bi-mic-fill mute-toggle-unmuted" [ngClass]="muteStatus ? 'hide' : 'show'"></i>
+        <i class="bi bi-mic-mute-fill mute-toggle-muted" [ngClass]="muteStatus ? 'show' : 'hide'"></i>
       </button>
-      <button
-        class="mini-iconbutton-neumorphism hold-toggle"
-        matTooltip="Hold"
-        matTooltipPosition="above"
-        (click)="btnHoldCall()"
-        [ngClass]="xferStatus ? 'hide' : 'show'"
-      >
-        <i
-          class="bi bi-pause-fill hold-toggle-onhold"
-          [ngClass]="holdStatus ? 'hide' : 'show'"
-        ></i>
-        <i
-          class="bi bi-play-fill hold-toggle-oncall"
-          [ngClass]="holdStatus ? 'show' : 'hide'"
-        ></i>
+      <button class="mini-iconbutton-neumorphism hold-toggle" matTooltip="Hold" matTooltipPosition="above"
+        (click)="btnHoldCall()" [ngClass]="xferStatus ? 'hide' : 'show'">
+        <i class="bi bi-pause-fill hold-toggle-onhold" [ngClass]="holdStatus ? 'hide' : 'show'"></i>
+        <i class="bi bi-play-fill hold-toggle-oncall" [ngClass]="holdStatus ? 'show' : 'hide'"></i>
       </button>
-      <input
-        type="number"
-        class="mini-input-neumorphism"
-        placeholder="Transfer to..."
-        [ngClass]="xferStatus ? 'show' : 'hide'"
-      />
-      <button
-        class="mini-iconbutton-neumorphism"
-        matTooltip="Transfer to"
-        matTooltipPosition="above"
-        (click)="btnXferCall()"
-      >
-        <i
-          class="bi bi-telephone-forward-fill"
-          [ngClass]="xferStatus ? 'hide' : 'show'"
-        ></i>
-        <i
-          class="bi bi-x-circle-fill"
-          [ngClass]="xferStatus ? 'show' : 'hide'"
-        ></i>
+      <input type="number" class="mini-input-neumorphism" placeholder="Transfer to..."
+        [ngClass]="xferStatus ? 'show' : 'hide'" />
+      <button class="mini-iconbutton-neumorphism" matTooltip="Transfer to" matTooltipPosition="above"
+        (click)="btnXferCall()">
+        <i class="bi bi-telephone-forward-fill" [ngClass]="xferStatus ? 'hide' : 'show'"></i>
+        <i class="bi bi-x-circle-fill" [ngClass]="xferStatus ? 'show' : 'hide'"></i>
       </button>
-      <button
-        class="mini-iconbutton-neumorphism"
-        matTooltip="Hang up"
-        matTooltipPosition="above"
-        (click)="btnHangUpCall()"
-      >
+      <button class="mini-iconbutton-neumorphism" matTooltip="Hang up" matTooltipPosition="above"
+        (click)="btnHangUpCall()">
         <i class="bi bi-telephone-x-fill"></i>
       </button>
     </div>
   </div>
   <div class="form-row">
     <div class="col-4 button-inline">
-      <p-dropdown
-        [options]="optVoiceMail"
-        class="button-neumorphism"
-        (onChange)="leaveVoiceMail()"
-        optionLabel="templateName"
-        optionValue="templateId"
-        placeholder="VM"
-        [formControl]="voiceMailLeft"
-      ></p-dropdown>
+      <p-dropdown [options]="optVoiceMail" class="button-neumorphism" (onChange)="leaveVoiceMail()"
+        optionLabel="templateName" optionValue="templateId" placeholder="VM" [formControl]="voiceMailLeft"></p-dropdown>
     </div>
     <div class="col-4 button-inline">
-      <p-dropdown
-        [options]="optSMS"
-        class="button-neumorphism"
-        (onChange)="sendSMSMessage()"
-        optionLabel="templateName"
-        optionValue="templateId"
-        placeholder="SMS"
-        [formControl]="smsMessageSent"
-      ></p-dropdown>
+      <p-dropdown [options]="optSMS" class="button-neumorphism" (onChange)="sendSMSMessage()" optionLabel="templateName"
+        optionValue="templateId" placeholder="SMS" [formControl]="smsMessageSent"></p-dropdown>
     </div>
     <div class="col-4 button-inline">
-      <p-dropdown
-        [options]="optEmail"
-        class="button-neumorphism"
-        (onChange)="sendEmail()"
-        optionLabel="templateName"
-        optionValue="templateId"
-        placeholder="Email"
-        [formControl]="emailSent"
-      ></p-dropdown>
+      <p-dropdown [options]="optEmail" class="button-neumorphism" (onChange)="sendEmail()" optionLabel="templateName"
+        optionValue="templateId" placeholder="Email" [formControl]="emailSent"></p-dropdown>
     </div>
   </div>
   <div class="form-row">
@@ -162,10 +83,7 @@
     </div>
   </div>
   <div class="form-row">
-    <div
-      class="col-12 button-inline"
-      [ngClass]="tglAutoDialer ? 'hide' : 'show'"
-    >
+    <div class="col-12 button-inline" [ngClass]="tglAutoDialer ? 'hide' : 'show'">
       <button class="button-neumorphism float-right" (click)="nextCall()">
         Next call <i class="bi bi-arrow-right-circle-fill"></i>
       </button>
@@ -180,54 +98,42 @@ For now, I'd like the data shown.  But, clicking a div makes that customer the a
     <div class="filter-notes-container">
       <mat-form-field appearance="standard">
         <mat-label>Search</mat-label>
-        <input
-          matInput
-          type="text"
-          [formControl]="searchCall"
-          (keyup)="filterCall()"
-          placeholder="MRN, Full name, Phone number"
-        />
+        <input matInput type="text" [formControl]="searchCall" (keyup)="filterCall()"
+          placeholder="MRN, Full name, Phone number" />
       </mat-form-field>
     </div>
     <div class="txt-center margin-tp" *ngIf="dialSessionArray.length == 0">
       No data found.
     </div>
     <div *ngFor="let log of dialSessionArray; let i = index" id="list">
-      <div
-        class="phone-log"
-        [ngClass]="
+      <div class="phone-log" [ngClass]="
           currentCall && log.uid === currentCall.uid
             ? 'button-neumorphism-active'
             : ''
-        "
-      >
+        ">
         <div class="width-100" (click)="selectCustomer(log.uid)" id="{{ i }}">
           <div class="form-check form-check-inline width-100" id="{{ i }}">
             <h6 class="width-100" id="{{ i }}">{{ log.fullname }}</h6>
-            <small class="width-100 txt-rt" id="{{ i }}">{{
+            <small *ngIf="log.lastContact" class="width-100 txt-rt" id="{{ i }}">{{
               log.lastContact.date.toMillis() | date: "MM/dd/yyyy"
-            }}</small>
+              }}</small>
           </div>
           <div class="form-check form-check-inline width-100" id="{{ i }}">
             <p class="width-100" id="{{ i }}">
               {{ this.DataService.formatPhoneNumber(log.phonenumber) }}
             </p>
-            <small class="width-100 txt-rt" id="{{ i }}">{{
+            <small *ngIf="log.lastContact" class="width-100 txt-rt" id="{{ i }}">{{
               log.lastContact.date.toMillis() | date: "h:mm a"
-            }}</small>
+              }}</small>
           </div>
           <div class="form-check form-check-inline width-100" id="{{ i }}">
-            <small class="width-100">{{ log.lastContact.result }}</small>
+            <small class="width-100" *ngIf="log.lastContact">{{ log.lastContact.result }}</small>
             <small class="width-100 txt-rt hide" id="call{{ i }}">2min</small>
           </div>
         </div>
 
-        <button
-          class="iconbutton-neumorphism float-right"
-          (click)="showTimeHandled(i)"
-          matTooltip="Time handled"
-          matTooltipPosition="left"
-        >
+        <button class="iconbutton-neumorphism float-right" (click)="showTimeHandled(i)" matTooltip="Time handled"
+          matTooltipPosition="left">
           <i class="bi bi-hourglass-split"></i>
         </button>
         <hr />
