--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
 @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import "../node_modules/primeng/resources/primeng.min.css";
 @import "../node_modules/primeicons/primeicons.css";
-
 @import "../node_modules/primeng/resources/themes/nova/theme.css";
 
 html {
@@ -28,6 +26,7 @@ body {
   height: 0.5rem;
   border-radius: 2rem;
 }
+
 ::-webkit-scrollbar:hover {
   width: 0.6rem;
   height: 0.6rem;
@@ -54,10 +53,10 @@ body {
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
-  margin: 0;    
+  margin: 0;
 }
 
-textarea{
+textarea {
   resize: none !important;
   overflow-x: auto !important;
 }
@@ -116,6 +115,7 @@ textarea{
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
@@ -137,15 +137,25 @@ textarea{
 .hide {
   display: none !important;
 }
+
 .show-line {
   display: inline-flex !important;
 }
+
 .show-line-b {
   display: inline-block !important;
 }
 
 .hide-line {
   display: none !important;
+}
+
+.not-visible {
+  visibility: hidden;
+}
+
+.visible {
+  visibility: visible;
 }
 
 .margin-right {
@@ -173,15 +183,17 @@ textarea{
 }
 
 .margin-lt {
-  margin-left: 1rem;
+  margin-left: 1rem !important;
 }
 
 .margin-rt {
-  margin-right: 1rem;
+  margin-right: 1rem !important;
 }
+
 .margin-tp {
   margin-top: 1rem;
 }
+
 .float-rt {
   float: right;
 }
@@ -197,8 +209,13 @@ textarea{
 .txt-center {
   text-align: center;
 }
+
 .color-rd {
   color: #a91e2c;
+}
+
+.color-gr {
+  color: #296e58;
 }
 
 .not-rounded {
@@ -208,18 +225,20 @@ textarea{
 .elm-rounded {
   border-radius: 1rem !important;
 }
+
 .not-bold {
   font-weight: normal !important;
 }
+
 .input-disabled-neumorphism {
   outline: 0 !important;
   box-shadow: none !important;
 }
 
-.no-padding-rt{
+.no-padding-rt {
   padding-right: 0 !important;
 }
 
-.no-padding-lt{
+.no-padding-lt {
   padding-left: 0 !important;
 }
