Hooking up newTemplate and changeTemplate

--- a/src/app/components/admin-template/admin-template.component.html
+++ b/src/app/components/admin-template/admin-template.component.html
@@ -416,7 +416,7 @@
           <p-table
             #dataTable
             [columns]="thCustomerStatus"
-            [value]="tdCustomerStatus"
+            [value]="td.statuses"
             [rows]="5"
             [paginator]="true"
             [rowsPerPageOptions]="[5, 10, 25, 50]"
