--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -158,8 +158,8 @@
                 </div>
 
               <br />
-              <p-fileUpload name="queueList[]" url="./thisNeedToBeSetUpByBackend" accept=".csv" [auto]="true"
-                (onUpload)="getFileUploaded($event)"></p-fileUpload>
+              <!-- <p-fileUpload name="queueList[]" url="./thisNeedToBeSetUpByBackend" accept=".csv" [auto]="true"
+                (onUpload)="getFileUploaded($event)"></p-fileUpload> -->
 
             </div>
 
